Agregado de checkbox de aceptación de política de tratamiento de datos personales en la página de inicio de sesión del comprador

--- a/src/app/pages/login-comprador/login-comprador.component.html
+++ b/src/app/pages/login-comprador/login-comprador.component.html
@@ -61,6 +61,18 @@
           </button>
         </mat-form-field>
       </div>
+      <div class="row">
+        <mat-checkbox color="primary">
+          Acepto expresamente la Política de Tratamiento de Datos Personales de
+          Agritec
+        </mat-checkbox>
+      </div>
+      <div class="button-submit">
+        <button mat-raised-button color="primary">
+          <mat-icon>send</mat-icon>
+          Enviar
+        </button>
+      </div>
     </form>
   </div>
 </div>
