--- a/src/app/pages/login-comprador/login-comprador.component.scss
+++ b/src/app/pages/login-comprador/login-comprador.component.scss
@@ -7,7 +7,7 @@
     .create-account{
       width: 850px;
       border-radius: 22px;
-      background-color: #f5f5f5;
+      background-color: #e8f1e3;
 
       header{
         display: flex;
@@ -16,9 +16,21 @@
         align-items: center;
         h1{
           margin: 0;
+          font-weight: 500;
         }
         p{
           margin: 0;
+          color: #1A5D1A;
+          font-size: 13px;
+
+          a{
+            color: #1A5D1A;
+            text-decoration: none;
+            font-weight: 500;
+          }
+          a:hover{
+            text-decoration: underline;
+          }
         }
       }
 
@@ -54,6 +66,11 @@
           mat-form-field{
             flex: 1;
           }
+        }
+
+        .button-submit{
+          display: flex;
+          justify-content: flex-end;
         }
       }
     }
