Eliminar componentes y actualizar estilos y rutas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,7 @@
   <div class="content">
     <mat-drawer-container class="example-container" autosize>
       <mat-drawer #drawer class="example-sidenav" mode="side">
-        <p>Auto-resizing sidenav</p>
-        @if (showFiller) {
-        <p>Lorem, ipsum dolor sit amet consectetur.</p>
-        }
-        <button (click)="showFiller = !showFiller" mat-raised-button>
-          Toggle extra text
-        </button>
+        <app-sidebar></app-sidebar>
       </mat-drawer>
 
       <div class="example-sidenav-content">
