--- a/src/app/pages/login-comprador/login-comprador.component.html
+++ b/src/app/pages/login-comprador/login-comprador.component.html
@@ -2,11 +2,6 @@
   <div class="create-account">
     <header>
       <h1>CREAR TU CUENTA</h1>
-      <p>
-        ¿Tienes tu empresa y quieres vender tus productos?
-        <a href="">Regístrate aquí</a>
-        <a href=""></a>
-      </p>
     </header>
     <mat-divider></mat-divider>
     <div class="anuncio">
@@ -15,10 +10,14 @@
       </div>
       <div class="message">
         <h2>¡Bienvenido a la comunidad de compradores!</h2>
-        <p>Encuentra los mejores productos y servicios para tu empresa.</p>
+        <p>
+          Encuentra los mejores productos y servicios para tu empresa y optimiza
+          tus procesos de agricultura.
+        </p>
       </div>
     </div>
     <form action="">
+      <h4>Completa tus Datos</h4>
       <div class="row">
         <mat-form-field appearance="outline">
           <mat-label>Nombres</mat-label>
