--- a/src/app/pages/login-comprador/login-comprador.component.html
+++ b/src/app/pages/login-comprador/login-comprador.component.html
@@ -46,6 +46,11 @@
       </div>
       <div class="row">
         <mat-form-field appearance="outline">
+          <mat-label>Usuario</mat-label>
+          <input matInput placeholder="Placeholder" />
+          <mat-icon matSuffix>person</mat-icon>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
           <mat-label>Contraseña</mat-label>
           <input matInput [type]="hide ? 'password' : 'text'" />
           <button
