--- a/src/app/pages/login-comprador/login-comprador.component.scss
+++ b/src/app/pages/login-comprador/login-comprador.component.scss
@@ -67,6 +67,7 @@
         .row{
           display: flex;
           gap: 1rem;
+          margin-bottom: .5rem;
 
           mat-form-field{
             flex: 1;
