--- a/src/app/pages/inicio/inicio.component.scss
+++ b/src/app/pages/inicio/inicio.component.scss
@@ -4,42 +4,105 @@
   align-items: center;
   justify-content: center;
 
-  .imagen{
-    width: 80%;
-    height: 80%;
+  .inicio-slogan{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
 
-    img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    .slogan{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h1{
+        font-size: 2.5rem;
+        margin: 0;
+        color: #557C55;
+        font-weight: 600;
+        line-height: 1.2;
+        text-align: center;
+      }
+      img{
+        margin: .5rem 0;
+      }
+      p{
+        font-size: 1rem;
+        text-align: center;
+        color: #344955;
+        font-weight: 400;
+        line-height: 2;
+      }
     }
-  }
-  .slogan{
-    h1{
-      font-size: 3rem;
-      text-align: center;
-      margin: 2rem 0;
-      color: #557C55;
-      font-weight: 700;
-      line-height: 1.2;
-    }
-    p{
-      font-size: 1rem;
-      text-align: center;
+
+    .imagen{
+      width: 80%;
+      height: 80%;
+      
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 1rem;
+      }
     }
   }
 
   .productos{
     margin-top: 2rem;
+
+    .subtitle{
+      background-color: #FFF67E;
+      margin: 1rem 0 2rem 0; 
+      padding: .5rem 1rem;
+      border-radius: 1rem;
+
+      h2{
+        font-size: 1.5rem;
+        margin: 0;
+      }
+    }
+
     .row{
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-
+      
       .example-card {
         max-width: 400px;
+        
+        .img-card{
+          width: 400px;
+          height: 220px;
+        }
+
+        mat-card-content{
+          padding: 1rem;
+        }
+
+        .precio{
+          display: flex;
+          align-items: center;
+          margin-top: 1rem;
+
+          .unidad{
+            font-size: 1rem;
+            color: #416D19;
+            font-weight: 600;
+          }
+          .monto{
+            margin-left: .5rem;
+            font-size: 1.5rem;
+          }
+        }
+
+        mat-card-actions{
+          display: flex;
+          justify-content: space-between;
+          gap: 1rem;
+        }
       }
     }
   }
