Añadir campo "id" a la interfaz de usuario, estilos de spinner para guardar, redireccionar a "contenido" si el usuario es administrador, límite de caracteres para el campo "telefono" en el formulario de inicio de sesión del comprador, y crear cuenta de usuario en el componente de inicio de sesión del comprador.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,12 +52,12 @@
           <div class="user">
             <p>{{ userLogged.nombres }} {{ userLogged.apellidos }}</p>
           </div>
-          } @if(statusLogged | async){
+          } @if((statusLogged | async) && (userLogged.role === 'admin')){}
+          @else{
           <button
             mat-icon-button
             [matMenuTriggerFor]="menu"
             aria-label="Example icon-button"
-            (click)="redirectCreateAccount()"
           >
             <mat-icon>account_circle</mat-icon>
           </button>
@@ -66,10 +66,10 @@
               <mat-icon>logout</mat-icon> salir
             </button>
           </mat-menu>
-          }
           <button mat-icon-button aria-label="Example icon-button">
             <mat-icon>shopping_cart</mat-icon>
           </button>
+          }
         </mat-toolbar>
 
         <div class="contenido">
