--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -15,7 +15,10 @@
     <ul>
       <li>
         <div class="item">
-          <a routerLink="inicio" routerLinkActive="router-link-active">
+          <a
+            routerLink="robot-siembra-plantacion"
+            routerLinkActive="router-link-active"
+          >
             <div>
               <mat-icon>smart_toy</mat-icon>
             </div>
@@ -26,7 +29,7 @@
 
       <li>
         <div class="item">
-          <a routerLink="empresa" routerLinkActive="router-link-active">
+          <a routerLink="robot-cosecha" routerLinkActive="router-link-active">
             <mat-icon>precision_manufacturing</mat-icon>
             <span>Robots de Cosecha</span>
           </a>
@@ -34,7 +37,10 @@
       </li>
       <li>
         <div class="item">
-          <a routerLink="empresa" routerLinkActive="router-link-active">
+          <a
+            routerLink="robot-desmalezado"
+            routerLinkActive="router-link-active"
+          >
             <mat-icon>smart_toy</mat-icon>
             <span>Robots de Desmalezado</span>
           </a>
@@ -42,7 +48,10 @@
       </li>
       <li>
         <div class="item">
-          <a routerLink="empresa" routerLinkActive="router-link-active">
+          <a
+            routerLink="robot-monitoreo-diagnostico"
+            routerLinkActive="router-link-active"
+          >
             <div>
               <mat-icon>support_agent</mat-icon>
             </div>
@@ -52,7 +61,7 @@
       </li>
       <li>
         <div class="item">
-          <a routerLink="empresa" routerLinkActive="router-link-active">
+          <a routerLink="robot-riego" routerLinkActive="router-link-active">
             <mat-icon>water_drop</mat-icon>
             <span>Robots de Riego</span>
           </a>
@@ -60,7 +69,10 @@
       </li>
       <li>
         <div class="item">
-          <a routerLink="empresa" routerLinkActive="router-link-active">
+          <a
+            routerLink="robot-proteccion-cultivo"
+            routerLinkActive="router-link-active"
+          >
             <div>
               <mat-icon>health_and_safety</mat-icon>
             </div>
@@ -70,7 +82,10 @@
       </li>
       <li>
         <div class="item">
-          <a routerLink="empresa" routerLinkActive="router-link-active">
+          <a
+            routerLink="robot-manejo-suelo"
+            routerLinkActive="router-link-active"
+          >
             <div>
               <mat-icon>analytics</mat-icon>
             </div>
@@ -80,7 +95,10 @@
       </li>
       <li>
         <div class="item">
-          <a routerLink="empresa" routerLinkActive="router-link-active">
+          <a
+            routerLink="robot-vigilancia-seguridad"
+            routerLinkActive="router-link-active"
+          >
             <div>
               <mat-icon>egg_alt</mat-icon>
             </div>
