--- a/src/app/pages/pages-admin/usuarios/handle-usuario/handle-usuario.component.html
+++ b/src/app/pages/pages-admin/usuarios/handle-usuario/handle-usuario.component.html
@@ -5,7 +5,7 @@
   <mat-divider></mat-divider>
   <form [formGroup]="form" (ngSubmit)="submitForm($action)">
     <div mat-dialog-content class="dialog-content">
-      @if ($action == 'CREATE' || $action == 'UPDATE') {
+      @if ($action == 'CREATE') {
       <div class="form-group">
         <div class="form-row">
           <div class="form-input">
@@ -24,7 +24,111 @@
               <input
                 matInput
                 placeholder="Placeholder"
-                formControlName="apellido"
+                formControlName="apellidos"
+              />
+            </mat-form-field>
+          </div>
+          <div class="form-input">
+            <mat-form-field appearance="outline">
+              <mat-label>Correo</mat-label>
+              <input
+                matInput
+                placeholder="Placeholder"
+                formControlName="email"
+              />
+              <mat-icon matSuffix>alternate_email</mat-icon>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-input">
+            <mat-form-field appearance="outline">
+              <mat-label>Teléfono</mat-label>
+              <input
+                matInput
+                placeholder="Placeholder"
+                formControlName="telefono"
+              />
+            </mat-form-field>
+          </div>
+          <div class="form-input">
+            <mat-form-field appearance="outline">
+              <mat-label>Usuario</mat-label>
+              <input
+                matInput
+                placeholder="Placeholder"
+                formControlName="usuario"
+              />
+            </mat-form-field>
+          </div>
+          <div class="form-input">
+            <mat-form-field appearance="outline">
+              <mat-label>Introduce tu contraseña</mat-label>
+              <input
+                matInput
+                [type]="hidePassword ? 'password' : 'text'"
+                formControlName="password"
+              />
+              <button
+                type="button"
+                mat-icon-button
+                matSuffix
+                (click)="hidePassword = !hidePassword"
+                [attr.aria-label]="'hidePassword password'"
+                [attr.aria-pressed]="hidePassword"
+              >
+                <mat-icon>{{
+                  hidePassword ? "visibility_off" : "visibility"
+                }}</mat-icon>
+              </button>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      }@else if ( $action == 'UPDATE') {
+      <div class="form-group">
+        <div class="form-row">
+          <div class="form-input">
+            <mat-form-field appearance="outline">
+              <mat-label>Nombres Completos</mat-label>
+              <input
+                matInput
+                placeholder="Placeholder"
+                formControlName="nombres"
+              />
+            </mat-form-field>
+          </div>
+          <div class="form-input">
+            <mat-form-field appearance="outline">
+              <mat-label>Apellidos</mat-label>
+              <input
+                matInput
+                placeholder="Placeholder"
+                formControlName="apellidos"
+              />
+            </mat-form-field>
+          </div>
+          <div class="form-input">
+            <mat-form-field appearance="outline">
+              <mat-label>Correo</mat-label>
+              <input
+                matInput
+                placeholder="Placeholder"
+                formControlName="usuario"
+              />
+              <mat-icon matSuffix>alternate_email</mat-icon>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-input">
+            <mat-form-field appearance="outline">
+              <mat-label>Teléfono</mat-label>
+              <input
+                matInput
+                placeholder="Placeholder"
+                formControlName="telefono"
               />
             </mat-form-field>
           </div>
@@ -39,37 +143,12 @@
             </mat-form-field>
           </div>
         </div>
-        <div class="form-row">
-          <div class="form-input">
-            <mat-form-field appearance="outline">
-              <mat-label>Password</mat-label>
-              <input
-                matInput
-                placeholder="Placeholder"
-                formControlName="password"
-              />
-            </mat-form-field>
-          </div>
-          <div class="form-input">
-            <mat-form-field appearance="outline">
-              <mat-label for="inputSexo">Rol</mat-label>
-              <mat-select id="inputSexo">
-                <mat-option [value]="1"> Administrador </mat-option>
-                <mat-option [value]="1"> Editor </mat-option>
-                <mat-option [value]="1"> Visualizar </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-        </div>
       </div>
-
-      }@else if ($action == 'PERMISSIONS') {
-      <p>permisos</p>
       }@else{
       <div class="icon">
         <mat-icon>warning</mat-icon>
       </div>
-      <p>
+      <p style="max-width: 500px">
         ¿Está seguro que desea eliminar este usuario? Todos sus datos de
         <strong>{{ $user.nombres }}</strong> serán eliminados permanentemente.
         Esta acción no se puede deshacer.
@@ -92,4 +171,3 @@
     </div>
   </form>
 </div>
-
