--- a/src/app/pages/pages-admin/productos/productos.component.html
+++ b/src/app/pages/pages-admin/productos/productos.component.html
@@ -1,1 +1,94 @@
-<p>productos works!</p>
+<div class="container">
+  <div class="add">
+    <button mat-raised-button color="primary" (click)="openDialog('CREATE')">
+      <mat-icon>add</mat-icon> Agregar
+    </button>
+  </div>
+
+  <div class="table" [@fadeInAnimation]>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let product; let i = index">{{ i + 1 }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let product">{{ product.nombre }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="descripcion">
+        <th mat-header-cell *matHeaderCellDef>Descripción</th>
+        <td mat-cell *matCellDef="let product">{{ product.descripcion }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="precio">
+        <th mat-header-cell *matHeaderCellDef>Precio</th>
+        <td mat-cell *matCellDef="let product">{{ product.precio }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="cantidad">
+        <th mat-header-cell *matHeaderCellDef>cantidad</th>
+        <td mat-cell *matCellDef="let product">{{ product.cantidad }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="ruta_imagen">
+        <th mat-header-cell *matHeaderCellDef>Imagen</th>
+        <td mat-cell *matCellDef="let product">
+          <img
+            [src]="product.ruta_imagen"
+            alt="imagen"
+            width="100"
+            height="100"
+          />
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="user_id">
+        <th mat-header-cell *matHeaderCellDef>Proveedor</th>
+        <td mat-cell *matCellDef="let product">{{ product.user_id }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="categoria_id">
+        <th mat-header-cell *matHeaderCellDef>Categoria</th>
+        <td mat-cell *matCellDef="let product">{{ product.category_id }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef>Acción</th>
+        <td mat-cell *matCellDef="let product">
+          <div class="escritorio">
+            <button
+              mat-icon-button
+              matTooltip="editar"
+              matTooltipPosition="above"
+              class="small-button"
+              (click)="openDialog('UPDATE', product)"
+            >
+              <mat-icon color="primary" class="small-icon">edit</mat-icon>
+            </button>
+            <button
+              mat-icon-button
+              matTooltip="eliminar"
+              matTooltipPosition="right"
+              class="small-button"
+              (click)="openDialog('DELETE', product)"
+            >
+              <mat-icon color="warn" class="small-icon">delete</mat-icon>
+            </button>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+  <mat-paginator
+    [pageSize]="5"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    [length]="total"
+    showFirstLastButtons
+  >
+  </mat-paginator>
+</div>
